Refactor code and improve documentation
This commit refactors some parts of the code for better error handling and improves the documentation by adding detailed comments. Some tweaks have been made to ensure directory creation and better object null handling. Some access modifiers were also corrected according to their usage. Key changes include updating commands for proper error handling, enhancing code readability with useful comments, and optimizing import statements.